# Remote-File-Management-System

./: CMakeLists.txt  LICENSE  Make_and_Start.md  README.md  Server_Start.sh  make.sh  server_sql.sql
Client_src/: Cheak_Format.h  dialog.cpp  dialog.h  item_of_share.cpp  item_of_share.h  list_item.cpp  list_item.ui  main.cpp  mainwindow.h  myfile_page.cpp  myfile_page.h  myfile_page.ui  register.ui  share_file_widget.cpp  share_file_widget.h  share_file_widget.ui  user_info.h
Client_src/Client_Demo/: Client_Demo.pro  Resource.qrc  User_Name.h  dialog.ui  item_of_share.ui  list_item.h  mainwindow.cpp  mainwindow.ui  register.cpp  register.h  user_info.cpp  user_info.ui
NGINX_conf/: .nginx.conf.swp  nginx.conf
include/: Data_Solve.hpp  File_Class.hpp  db_operation.h  dfs_upload.h  json.hpp  make_log.h  server_confg.h
shell/: Fast_DFS_Start.sh
src/: DFS_Upload.cpp  DownLoad_File.cpp  Login_Cheak.cpp  Md5_Cheack.cpp  Up_Load_File.cpp  User_Register.cpp  cancel_shared_file.cpp  delete_file.cpp  shared_file.cpp
